<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_INTER" Id="{63432ee2-bd23-46cb-909b-5d2ebfcf2a46}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    RUN_KINEMATICS : BOOL := TRUE;
    RUN_COUPLED_VERTICAL : BOOL := TRUE;
    DISABLE_ALL_AXES : BOOL;
    ENABLE_ALL_AXES : BOOL;
    RESET_ALL : BOOL;
    
    
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>