<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_Safety" Id="{7ef98f96-74a7-46f9-a0b9-9ae986e08f2a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    Run_MotionSafety AT %Q* : BOOL := TRUE;
    ErrorAck_MotionSafety AT %Q* : BOOL;
    
    Run_MotionSafety_XRotAndZHor AT %Q* : BOOL:= TRUE;
    ErrorAck_MotionSafety_XRotAndZHor AT %Q* : BOOL;
    
    Run_MotionSafety_Y1AndY2 AT %Q* : BOOL:= TRUE;
    ErrorAck_MotionSafety_Y1AndY2 AT %Q* : BOOL;
    
    BrakeReset AT %Q* : BOOL;
    //Temp
    SafetyReset : BOOL;
END_VAR
VAR_GLOBAL CONSTANT
    nSAFETY_OUTPUTS: UINT := 0; //do these break with a 0 value?
	nSAFETY_DEVICES: UINT := 1;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>